# vc-trabajo-final-cliente-person-qualifier

./: main.py  pyproject.toml  run.sh  server.py  utils.py
face_detector/: face_detector.py  mediapipe.py  viola_jones.py
