[tool.poetry]
name = "cam-client-desktop"
version = "0.1.0"
description = ""
authors = ["josericardopenase <josericardopenase@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
mediapipe = "^0.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
